Correct spacing between title and url

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -92,6 +92,12 @@ button:hover {
   flex-direction: column;
   align-items: flex-start;
   overflow-x: scroll;
+  padding: 0;
+}
+
+.titleAndUrl > * {
+  margin: 0;
+  padding: 2px 0;
 }
 
 .selectionsX {
@@ -111,5 +117,5 @@ button:hover {
 
 .url {
   display: none;
-  word-break: hidden;
+  padding-top: 0;
 }
